--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -12,6 +12,7 @@ unit.testero-amogus.name= Amogus
 unit.testero-octo.name = Octo
 unit.testero-octo.description = [grey]All Hail [green]Octo[grey]!!!!
 unit.testero-sigam.name = [green] Sigam
+unit.testero-hakuna.name = [pink] Hakuna
 
 ## Air Kami
 unit.testero-t2ak.name = [grey]T2 AK
