--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -23,3 +23,4 @@ unit.testero-t2ak.name = [grey]T2 AK
 block.testero-bolverk.name = [blue] Bolverk
 block.testero-bolverk.details = from the weapon of the true azure successor itself, Bolverk is in your hand
 block.testero-tsukuyomi.name = [red] Tsukuyomi
+block.testero-girogane.name = Girogane
