--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -24,3 +24,4 @@ block.testero-bolverk.name = [blue] Bolverk
 block.testero-bolverk.details = from the weapon of the true azure successor itself, Bolverk is in your hand
 block.testero-tsukuyomi.name = [red] Tsukuyomi
 block.testero-girogane.name = Girogane
+block.testero-sonora.name = Sonora
