--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -25,3 +25,4 @@ block.testero-bolverk.details = from the weapon of the true azure successor itse
 block.testero-tsukuyomi.name = [red] Tsukuyomi
 block.testero-girogane.name = Girogane
 block.testero-sonora.name = Sonora
+block.testero-gapo.name = [green] Gapo
