--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -26,3 +26,4 @@ block.testero-tsukuyomi.name = [red] Tsukuyomi
 block.testero-girogane.name = Girogane
 block.testero-sonora.name = Sonora
 block.testero-gapo.name = [green] Gapo
+block.testero-heretic.name = Heretic
